@@ -68,6 +68,7 @@
    ; GOT/PLT and lt-relative accesses
    (UNSPEC_LTREL_OFFSET		100)
    (UNSPEC_LTREL_BASE		101)
+   (UNSPEC_POOL_OFFSET		102)
    (UNSPEC_GOTENT		110)
    (UNSPEC_GOT			111)
    (UNSPEC_GOTOFF		112)
